[package]
name = "google-maps-api-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
google_maps = "3.2.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
time = { version = "=0.3.15", features = ["formatting", "macros", "parsing", "serde"] }


[dev-dependencies]
dotenv = "0.15"
env_logger = "0.10"
tokio = { version = "1.26", features = ["rt", "rt-multi-thread", "macros"], default-features = false }
tokio-test = "0.4"
