[package]
name = "transit_trail"
version = "0.0.0-alpha.2"
description = "Navigate Winnipeg Transit with a different style"
authors = ["MaFeLP", "PrincessFoxx"]
license = "GPLv3-or-later"
repository = "https://github.com/MaFeLP/TransitTrail"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
log = "^0.4"
markdown = "1.0.0-alpha.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.3", features = ["dialog-confirm", "dialog-message", "notification-all", "shell-open"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.28", features = ["full"] }
toml = "0.7"
transit-api-client = { path = "../transit-api-client" }
time = "=0.3.15"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
