[package]
name = "testing_stops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-test = "0.4.2"
transit-api-client = { path = "../transit-api-client" }
