[package]
name = "transit-api-client"
version = "3.1.0"
authors = ["MaFeLP <mafelp@proton.me"]
edition = "2021"
rust-version = "1.68"
description = "A rust client for the Winnipeg Transit API made with reqwest"
#documentation = ""
readme = "README.md"
#homepage = ""
repository = "https://github.com/MaFeLP/computerscience402-final-project"
license = "GPL-3.0-or-later"
keywords = ["winnipeg", "wpg", "transit", "api"]
publish = false

[dependencies]
google-maps-api-client = { path = "../google-maps-api-client" }
log = "^0.4"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
time = { version = "^0.3.16", features = ["formatting", "macros", "parsing", "serde"] }

[dev-dependencies]
dotenv = "^0.15"
env_logger = "^0.10"
tokio = { version = "^1.28", features = ["rt", "rt-multi-thread", "macros"], default-features = false }
tokio-test = "^0.4"
